--- a/style.css
+++ b/style.css
@@ -8,15 +8,10 @@ body {
   color: red;
 }
 
-#demo {
-  color: blue;
-  font-size: 20px;
-  /* background-color: red; */
-}
-
 #editor {
   height: 80%;
-  width: 30%;
+  /* hide display */
+  width: 20%;
   display: inline-block;
   border-width: 20px;
 }
@@ -36,8 +31,10 @@ body {
 }
 
 #iframe {
+  /* hide display */
+  /* display: none; */
   height: 70%;
-  display: inline-block;
+  /* display: inline-block; */
   width: 15%;
   border-width: 2px;
 }
@@ -48,13 +45,12 @@ body {
   border-width: 2px;
 }
 
-#iframe3 {
-  color: blue;
-  height: 30%;
+#myTextarea {
+  color: red;
+  height: 79%;
   display: inline-block;
-  width: 55%;
-  border-width: 1px;
-  margin: 5px;
+  width: 25%;
+  font-size: 1.2em;
 }
 
 #run_button {
@@ -65,4 +61,20 @@ body {
 /* disable tag matching */
 .ace_editor .ace_marker-layer .ace_bracket {
   display: none;
+}
+
+
+#button1, #button2, #run_button {
+  /* background-color: #4CAF50; */
+  /* border: none; */
+  /* color: white; */
+  width: 180px;
+  height: 50px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
