--- a/style.css
+++ b/style.css
@@ -39,18 +39,19 @@ body {
   border-width: 2px;
 }
 #iframe2 {
-  height: 70%;
+  height: 79%;
   display: inline-block;
   width: 20%;
   border-width: 2px;
 }
 
 #myTextarea {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: red;
   height: 79%;
   display: inline-block;
   width: 25%;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 #run_button {
@@ -64,7 +65,7 @@ body {
 }
 
 
-#button1, #button2, #run_button {
+#button1, #btn-answer, #run_button, #btn-auto {
   /* background-color: #4CAF50; */
   /* border: none; */
   /* color: white; */
