--- a/style.css
+++ b/style.css
@@ -16,8 +16,18 @@ body {
   border-width: 20px;
 }
 #editor2 {
+  /* Main Display */
   height: 80%;
-  width: 50%;
+  /* width: 45%; */
+  width: 20%;
+  display: inline-block;
+  border-width: 20px;
+}
+#editor3 {
+  /* Main Display */
+  height: 80%;
+  /* width: 45%; */
+  width: 40%;
   display: inline-block;
   border-width: 20px;
 }
@@ -39,6 +49,7 @@ body {
   border-width: 2px;
 }
 #iframe2 {
+  /* Output results */
   height: 79%;
   display: inline-block;
   width: 20%;
@@ -46,16 +57,17 @@ body {
 }
 
 #myTextarea {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* Question and Answers */
+  font-family: 'Courier New', Courier, monospace;
   color: red;
   height: 79%;
   display: inline-block;
-  width: 25%;
+  width: 33%;
   font-size: 1em;
+  font-weight: bold;
 }
 
 #run_button {
-
   font-size: 40px;
 }
 
