--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 #editor2 {
   /* Main Display */
-  height: 80%;
+  height: 81.2%;
   width: 45%;
   display: inline-block;
   border-width: 20px;
@@ -51,7 +51,7 @@ body {
 }
 #iframe2 {
   /* Output results */
-  height: 79%;
+  height: 80.7%;
   display: inline-block;
   width: 19.7%;
   border-width: 2px;
@@ -62,7 +62,8 @@ body {
   font-family: 'Courier New', Courier, monospace;
   /* background-color: #272822; */
   /* color: cyan; */
-  height: 79%;
+  /* height: 79%; */
+  height: 80.3%;
   display: inline-block;
   width: 33%;
   font-size: 1em;
@@ -70,7 +71,7 @@ body {
 }
 
 #run_button {
-  font-size: 40px;
+  font-size: 16px;
 }
 
 /* disable tag matching */
@@ -83,6 +84,7 @@ body {
   /* background-color: #4CAF50; */
   /* border: none; */
   /* color: white; */
+  
   width: 180px;
   height: 50px;
   padding: 15px 32px;
@@ -90,6 +92,11 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 4px 4px;
   cursor: pointer;
+}
+
+h2 {
+  color: red;
+  padding: 0px 10px;
 }
