--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+:root {
+  
+  --main-color: #DCDCDC;
+  --main-bg-color: 	#282828;
+  --editor-bg-color: #272822;
+  --editor-color: #DCDCDC;
+  --title-color: cyan;
+}
+
 html,
 body {
   margin: 0;
@@ -5,7 +14,14 @@ body {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  color: red;
+  color: var(--main-color);
+  background-color: var(--main-bg-color);
+}
+
+#header {
+  display: flex;
+  border-width: 22px;
+  color: white;
 }
 
 #editor {
@@ -18,18 +34,24 @@ body {
 }
 #editor2 {
   /* Main Display */
-  height: 81.2%;
+  height: 89%;
   width: 45%;
   display: inline-block;
   border-width: 20px;
+  
+  /* color: white; */
+  background-color: var(--editor-bg-color);
+  color: var(--editor-color);
 }
 #editor3 {
   /* ACE Answer */
-  height: 80%;
+  height: 89%;
   /* width: 45%; */
   width: 0px;
   display: inline-block;
   border-width: 20px;
+  background-color: var(--editor-bg-color);
+  color: var(--editor-color);
 }
 
 #container {
@@ -51,10 +73,10 @@ body {
 }
 #iframe2 {
   /* Output results */
-  height: 80.7%;
+  height: 89.4%;
   display: inline-block;
   width: 19.7%;
-  border-width: 2px;
+  border-width: 1px;
 }
 
 #myTextarea {
@@ -63,11 +85,12 @@ body {
   /* background-color: #272822; */
   /* color: cyan; */
   /* height: 79%; */
-  height: 80.3%;
+  height: 89%;
   display: inline-block;
   width: 33%;
   font-size: 1em;
   font-weight: bold;
+  background-color: var(--main-bg-color);
 }
 
 #run_button {
@@ -81,7 +104,8 @@ body {
 
 
 #button1, #btn-answer, #run_button, #btn-auto {
-  /* background-color: #4CAF50; */
+  background-color: var(--main-bg-color);
+  color: var(--main-color);
   /* border: none; */
   /* color: white; */
   
@@ -97,6 +121,38 @@ body {
 }
 
 h2 {
-  color: red;
+  display: flex;
+  justify-content: end;
+  color: var(--title-color);
   padding: 0px 10px;
+  /* background-color: blue; */
+  color: darkturquoise;
 }
+
+#text {
+ background-color: transparent;
+ color: transparent;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #555; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #555; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #777; 
+}
+
