--- a/style.css
+++ b/style.css
@@ -63,3 +63,10 @@ body {
   font-size: 12px;
   color: rgba(0,0,0,0.1);
 }
+
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
